--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ header {
 }
 
 body {
-    background-color: orange;
+    background-color: lightblue;
 }
 
 img {
@@ -17,6 +17,10 @@ img {
 
 input.placeholder {
     color: lightgrey;
+}
+#input{
+    width: 15%;
+    height:80%;
 }
 
 #results-box {
